# dwg-ai-extractor

./: .gitattributes  .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml  requirements.txt  start.ps1  start.sh
backend/: __init__.py  batch_processor.py  cad_reader.py  cli.py  config_store.py  context_builder.py  excel_exporter.py  extractor.py  field_templates.py  llm_client.py  models.py
configs/: default_template.json  model_config.example.json
docs/: user-guide.md
frontend/desktop/: __init__.py  app.py  panels.py
tests/: test_context_and_cad_reader.py  test_excel_and_batch.py  test_extractor_llm.py  test_field_templates.py  test_llm_client.py
