[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwg-ai-extractor"
version = "0.1.0"
description = "Template-driven DWG/DXF extractor using OpenAI-compatible chat completion APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "DWG AI Extractor contributors" },
]
keywords = ["dwg", "dxf", "cad", "excel", "llm", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
]
dependencies = [
    "ezdxf>=1.3.0",
    "openpyxl>=3.1.0",
    "PySide6>=6.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
dwg-ai-extractor = "backend.cli:main"
dwg-ai-extractor-gui = "frontend.desktop.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
